# goit-python-hw-19

./: .gitignore  README.md  pyproject.toml
hw9scr/: load_json.py  main.py  models.py
hw9scr/test/: test.py
